= Changelog
== Version 0.6.0

=== Minor Enhancement

* update to SQLite version 3.6.7

== Version 0.5.1 - 2008-11-30

=== Minor Enhancement

* update to SQLite version 3.6.6.2

== Version 0.5.0 - 2008-11-16

=== Major Enhancement

* amalgalite-pack-into-db has been reworked into amalgalite-pack
* ruby code that is packed into a database for later requiring can now be
  compressed

=== Minor Enhancement

* update to SQLite version 3.6.5

== Version 0.4.2 - 2008-10-12

=== Minor Enhancements

* release of windows gem

== Version 0.4.1 - 2008-09-28

=== Minor Enhancement 

* update to SQLite3 version 3.6.3
* change rdoc template to darkfish
  
== Version 0.4.0 - 2008-09-14

=== Major Enhancements
* update to SQLite3 version 3.6.2 and enable the RTree option by default
* Amalgalite::Requires module allowing ruby code to be 'required' from columns in an SQLite database
* Amagalite::Requires::Bootstrap extension module enabling low level boot
  strapping of the pure ruby Amalgalite code from an sqlite database

=== Minor Enhancements

* more indepth information about indexes is available via the Index class
* add support for sqlite3_status and sqlite3_db_status information

=== Bugfixes

* fix nil exception when using a declared_data_type on primary key column that
  has no declared_data_type
* when Database#transaction is passed a block, the return value is the return
  value of the block
* nested transactions are 'faked'.  Calling Database#transaction while
  Databased#in_transaction? is true does not result in an exception, but
  continues on in the current transaction.  
* raise LoadError if required in the same program as sqlite3-ruby.  These
  libraries conflict with each other.

== Version 0.2.4 - 2008-07-13

===  Bugfixes
* fix compilation when ruby is compiled without pthreads using 

== Version 0.2.3 - 2008-07-12

=== Bugfixes
* make sure file permissions are all read before shipping gem

== Version 0.2.2 - 2008-07-12

=== Bugfixes