@@ -1,9 +1,10 @@
-Next Release:
+Next Release -- 0.6.0 :
   - create_function @done(2009-01-04 20:14:39)
     - examples @done(2009-01-04 20:37:32)
   - create_aggregate @done(2009-01-05 20:40:40)
     - examples @done(2009-01-05 20:41:22)
   - busy timeouts @done(2009-01-06 23:33:41)
+  - sqlite3_interrupt @done(2009-01-07 00:43:37)
   - progress handler
 
 Future Release:
